# playfulprogramming

./: .dockerignore  .editorconfig  .env.debug  .env.development  .env.example  .env.localhost  .eslintignore  .eslintrc  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .ignore  .lintstagedrc.js  .prettierignore  .prettierrc  .prettierrc.cjs  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.code.md  CONTRIBUTING.es.md  CONTRIBUTING.md  CORE_VALUES.md  Dockerfile  Dockerfile.builder  FEATURES.md  LICENSE.md  README.es.md  README.md  astro.config.mjs  astro.config.ts  authors.js  babel.config.js  docker-compose.yml  eslint.config.mjs  esmRequire.js  fly.review.toml  fly.toml  gatsby-config.js  (+31 more)
.github/: FUNDING.yml
.history/: .gitignore_20240219094114
__mocks__/: chrome-setup.ts  file-mock.ts  jest.setup.js  mock-unicorn-data.js  setup.ts
api/: .gitignore  github-auth.ts  package-lock.json  package.json  search.ts
build-scripts/: generate-epubs.ts  search-index.ts
components/: PostRenderer.tsx
config/: gatsby-config-consts.js  redirects_unicorn-utterances.com
e2e/: .gitignore  Dockerfile  README.md  docker-compose.e2e.yml  package.json  playwright.config.ts  setup.ts
e2e-tests/: posts-example.spec.ts
hooks/: useMarkdownRenderer.tsx
lib/: markdownToHtml.ts  markdownToHtml.tsx
native/: .gitignore  Cargo.toml  README.md  index.ts  package.json
native/src/: lib.rs
pages/: index.tsx
patches/: @astrojs+image+0.3.0.patch  @astrojs+image+0.3.1.patch  @astrojs+preact+3.1.1.patch  PATCHES.md  astro+1.0.0-beta.65.patch  vite.patch
(+6983 files in other folders)
