[package]
name = "native"
version = "0.1.0"
license = "MIT"
edition = "2024"
exclude = ["index.node"]
rust-version = "1.93.1"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1.1"
mermaid-rs-renderer = { git = "https://github.com/1jehuang/mermaid-rs-renderer", tag = "v0.2.0", default-features = false }
lazy_static = "1.5.0"
